fixed post index alignment. added my professional image also

--- a/public/css/code_connection.css
+++ b/public/css/code_connection.css
@@ -195,4 +195,23 @@ body {
 	background-color: 
 }
 
+.icon-txt{
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+
+}
+
+.caption{
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+
+.fa{
+	margin:3px;
+}
 	
